--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
+  web:
+    resources:
+      static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${file-upload-path}
+
 server:
   servlet:
     encoding:
@@ -23,3 +27,5 @@ logging:
   level:
     com.example.mybatisplus.mapper: debug
 file-upload-path: ./file
+
+
